--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,10 @@ name: ENDF-VIII Data
 on:  
   push:    
     branches:
-    - master
+    - main
   pull_request:    
     branches:
-    - master
+    - main
 
 jobs:
     build:
